kubernetes/applications/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app: homer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: homer
